# captcha-solver-v3

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: admin.ts  auth.ts  billing.ts  client.ts  tasks.ts
frontend/src/components/layout/: AdminLayout.tsx  AuthLayout.tsx  PortalLayout.tsx
frontend/src/components/ui/: toaster.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/pages/admin/: AdminFinancePage.tsx  AdminTasksPage.tsx  AdminUsersPage.tsx  index.ts
frontend/src/pages/public/: LoginPage.tsx  RegisterPage.tsx
frontend/src/pages/user/: ApiKeysPage.tsx  DashboardPage.tsx  TasksPage.tsx  WalletPage.tsx  index.ts
frontend/src/stores/: auth.ts
frontend/src/types/: index.ts
migrations/: env.py
migrations/versions/: 001_initial_schema.py
src/captcha_solver/api/: deps.py  main.py
src/captcha_solver/api/auth/: schemas.py  users.py
src/captcha_solver/api/v1/routes/: admin_routes.py  task.py  user_routes.py
src/captcha_solver/api/v1/schemas/: task.py
src/captcha_solver/application/services/: auth_service.py  billing_service.py  task_service.py
src/captcha_solver/config/: __init__.py  settings.py
src/captcha_solver/domain/: __init__.py  exceptions.py
src/captcha_solver/domain/entities/: __init__.py  task.py  transaction.py  user.py
src/captcha_solver/domain/interfaces/: __init__.py  ai_provider.py  browser.py  repositories.py
src/captcha_solver/domain/value_objects/: __init__.py  enums.py  money.py
src/captcha_solver/infrastructure/browser/: __init__.py  pool.py  solver.py
src/captcha_solver/infrastructure/cache/: rate_limiter.py
src/captcha_solver/infrastructure/database/: connection.py  models.py
src/captcha_solver/infrastructure/database/repositories/: task_repo.py  transaction_repo.py  user_repo.py
src/captcha_solver/worker/: main.py
src/captcha_solver/worker/handlers/: solve_task.py
