[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "captcha-solver"
version = "3.0.0"
description = "reCAPTCHA v2 自动识别服务 - 2captcha 兼容 API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Captcha Solver Team" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    # Web Framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Authentication
    "fastapi-users[sqlalchemy]>=13.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Task Queue
    "arq>=0.26.0",
    "redis>=5.0.0",

    # Browser Automation
    "playwright>=1.40.0",

    # AI Providers
    "httpx>=0.26.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",

    # ASR
    "openai-whisper>=20231117",
    "pydub>=0.25.1",

    # Utilities
    "loguru>=0.7.2",
    "python-multipart>=0.0.6",

    # Admin
    "sqladmin>=0.16.0",

    # Rate Limiting
    "slowapi>=0.1.9",

    # Monitoring
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "locust>=2.23.0",
]

[project.scripts]
captcha-api = "captcha_solver.api.main:run"
captcha-worker = "captcha_solver.worker.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/captcha_solver"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
